commondir = $(includedir)/dune/ax1/common

common_HEADERS = ax1_newton.hh   		  \
					  constants.hh            \
					  electrolyte.hh          \
					  element_subdomain_mapper.hh \
		           element_properties.hh   \
					  membrane.hh             \
					  membrane_physics.hh     \
		           output.hh					  \
					  tools.hh 					  \
					  vectordiscretegridfunctiongradient.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
