commondir = $(includedir)/dune/ax1/acme0/common

common_HEADERS = 	acme0_boundary.hh       \
						acme0_factory.hh        \
					 	acme0_initial.hh        \
					 	acme0_output.hh         \
					 	acme0_parametertree.hh  \
					 	acme0_physics.hh        \
					 	acme0_setup.hh          \
					 	convectiondiffusiondg.hh \
					 	convectiondiffusionfem.hh \
					 	nernst_planck_parameters.hh \
					 	poisson_parameters.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
