fullyimplicitdir = $(includedir)/dune/ax1/acme0/fully-implicit

fullyimplicit_HEADERS = acme0_fully_coupled.hh						\
								acme0_operator_fully_implicit.hh       \
							 	acme0_toperator_fully_implicit.hh
							 	
headercheck_IGNORE = acme0_Pk_fully_implicit.hh	 	

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
