commondir = $(includedir)/dune/ax1/acme1/common

common_HEADERS = 	acme1_boundary.hh       \
						acme1_factory.hh        \
					 	acme1_initial.hh        \
					 	acme1_output.hh         \
					 	acme1_parametertree.hh  \
					 	acme1_physics.hh        \
					 	acme1_setup.hh          \
					 	acme1_setup_nomembrane.hh \
					 	convectiondiffusiondg.hh \
					 	convectiondiffusionfem.hh \
					 	nernst_planck_parameters.hh \
					 	poisson_parameters.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
