commondir = $(includedir)/dune/ax1/acme1MD/common

common_HEADERS = 	acme1MD_boundary.hh       \
						acme1MD_factory.hh        \
					 	acme1MD_initial.hh        \
					 	acme1MD_output.hh         \
					 	acme1MD_parametertree.hh  \
					 	acme1MD_physics.hh        \
					 	acme1MD_setup.hh          \
					 	acme1MD_setup_nomembrane.hh \
					 	convectiondiffusiondg.hh \
					 	convectiondiffusionfem.hh \
					 	nernst_planck_parameters.hh \
					 	poisson_parameters.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
