configurationsdir = $(includedir)/dune/ax1/acme1MD/configurations

SUBDIRS = bigmac \
			 cheeseburger \
 			 default \
			 hamburger \
			 step

configurations_HEADERS = all_configurations.hh \
								 no_analytical_solution.hh \
								 zero_potential.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
