fullyimplicitdir = $(includedir)/dune/ax1/acme1MD/fully-implicit

fullyimplicit_HEADERS = acme1MD_experimental_operator_fully_implicit_DG.hh \
								acme1MD_experimental_operator_fully_implicit.hh  \
								acme1MD_fully_coupled.hh \
								acme1MD_toperator_fully_implicit.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
