operatorsplitdir = $(includedir)/dune/ax1/acme1MD/operator-split

operatorsplit_HEADERS = acme1MD_operator.hh       \
								acme1MD_operator_split.hh \
							 	acme1MD_toperator.hh      \
							 	nernst_planck_power_operator.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
