commondir = $(includedir)/dune/ax1/acme2/common

common_HEADERS = 	acme2_boundary.hh       \
						acme2_factory.hh        \
					 	acme2_initial.hh        \
					 	acme2_output.hh         \
					 	acme2_parametertree.hh  \
					 	acme2_physics.hh        \
					 	acme2_setup.hh          \
					 	acme2_simulation.hh     \
					 	acme2_solutionvectors.hh \
					 	nernst_planck_parameters.hh \
					 	poisson_boltzmann_parameters.hh \
					 	poisson_parameters.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
