commondir = $(includedir)/dune/ax1/acme2_cyl/common

common_HEADERS = 	acme2_cyl_boundary.hh       \
						acme2_cyl_factory.hh        \
						acme2_cyl_geometrytools.hh \
						acme2_cyl_geometrywrapper.hh \
					 	acme2_cyl_initial.hh        \
					 	acme2_cyl_output.hh         \
					 	acme2_cyl_parametertree.hh  \
					 	acme2_cyl_physics.hh        \
					 	acme2_cyl_setup.hh          \
					 	acme2_cyl_simulation.hh     \
					 	acme2_cyl_solutionvectors.hh \
					 	nernst_planck_parameters.hh \
					 	poisson_boltzmann_parameters.hh \
					 	poisson_parameters.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
