configurationsdir = $(includedir)/dune/ax1/acme2_cyl/configurations

SUBDIRS = default \
   			  step \
   			  test_scales

configurations_HEADERS = all_configurations.hh \
						 custom_potential.hh \
						 no_analytical_solution.hh \
						 zero_potential.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
