operatordir = $(includedir)/dune/ax1/acme2_cyl/operator

operator_HEADERS = acme2_cyl_operator_fully_coupled.hh  \
								acme2_cyl_toperator.hh \
								convectiondiffusionfem.hh \
								poisson_boltzmann_operator.hh
							 	
include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
