bigmacdir = $(includedir)/dune/ax1/acme1MD/configurations/bigmac

bigmac_HEADERS = bigmac_config.hh \
						bigmac_initial.hh \
						bigmac_nernst_planck_boundary.hh \
						bigmac_poisson_boundary.hh       \
						bigmac_solution_con.hh           \
						bigmac_solution_pot.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
