cheeseburgerdir = $(includedir)/dune/ax1/acme1MD/configurations/cheeseburger

cheeseburger_HEADERS = cheeseburger_config.hh \
						cheeseburger_initial.hh \
						cheeseburger_nernst_planck_boundary.hh \
						cheeseburger_poisson_boundary.hh       \
						cheeseburger_solution_con.hh           \
					  cheeseburger_solution_pot.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
