hamburgerdir = $(includedir)/dune/ax1/acme1MD/configurations/hamburger

hamburger_HEADERS = hamburger_config.hh \
						hamburger_initial.hh \
						hamburger_nernst_planck_boundary.hh \
						hamburger_poisson_boundary.hh       \
						hamburger_solution_con.hh           \
						hamburger_solution_pot.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
