stepdir = $(includedir)/dune/ax1/acme1MD/configurations/step

step_HEADERS = step_config.hh \
						step_initial.hh \
						step_nernst_planck_boundary.hh \
						step_poisson_boundary.hh       \
						step_solution_con.hh           \
						step_solution_pot.hh

include $(top_srcdir)/am/global-rules

-include $(top_srcdir)/git.mk
